Fixed dependencies (only needed!). Fixed font.css path in cpustyle.css

--- a/app/styles/cpustyle.css
+++ b/app/styles/cpustyle.css
@@ -36,7 +36,7 @@ Import fonts
 */
 
 /* load Open Sans Font from local */
-@import url(../fonts/font.css);
+@import fonts/font.css;
 
 /***
 Reset and overrides  
