--- a/app/views/main_oauth.html
+++ b/app/views/main_oauth.html
@@ -8,14 +8,16 @@
 
     <div ng-controller="OauthLoginCtrl" ng-cloak>
         <div>
-            <p><h3>Logged User Info</h3></p>
-            <p>User Status: {{ login_status }} </p>
+<!--            <p><h3>Logged User Info</h3></p>-->
+            <p><b>User Status: {{ login_status }} </b></p>
         </div>
         <div ng-show="login_status == 'connected'">
-            <p>User logged: {{ user.name }} </p>
+            <p><b>Welcome {{ user.name }}!</b></p>
+<!--            <p>User logged: {{ user.name }} </p>
             <p>Roles: {{ user.roles }} </p>
-            <p>Bearer Token value: {{ user.bToken }} </h3>
+            <p>Bearer Token value: {{ user.bToken }} </p>
             <p>XSRF Token value: {{ user.xsrfToken }} </p>
+            <p>Is logged now? {{ user.isLogged }} </p>-->
         </div>
 
     
