--- a/app/views/demo/performance/performance.html
+++ b/app/views/demo/performance/performance.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class="container" scrolly-scroll>
+    <p class="lead">Performance Demo</p>
+    <ul class="nav nav-tabs">
+        <li ng-class="{ active: $state.includes('performance.webworkers') }">
+            <a ui-sref=".webworkers">Web Workers</a>
+        </li>
+        <li ng-class="{ active: $state.includes('performance.hpcontrols') }">
+            <a ui-sref=".hpcontrols">HP Controls</a>
+        </li>
+    </ul>
 
-</body>
-</html>
+    <div class="tab-content">
+        <div class="tab-pane active" ui-view autoscroll="false"></div>
+    </div>
+</div>
