--- a/app/views/demo/performance/performance.webworkers.html
+++ b/app/views/demo/performance/performance.webworkers.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<webworker id="" message="" template=""></webworker>
 
-</body>
-</html>
+
+<p>Person details in State 1:</p>
+<label>First Name:</label>
+<input ng-model="person.firstName" placeholder="First Name">
+<label>Last Name:</label>
+<input ng-model="person.lastName" placeholder="Last Name">
+<hr>
+<p>Try changing input values and see how they are synced with state 2.</p>
