--- a/app/views/demo/performance/performance.webworkers.html
+++ b/app/views/demo/performance/performance.webworkers.html
@@ -1,10 +1,13 @@
-<webworker id="" message="" template=""></webworker>
+<div ng-controller="imageWebworkerController">
+    <div style="display: inline;">
+        <img src="resources/webworkers/angularjs.jpg" id="source">
+    </div>
+
+    <div id="target" style="display: inline;">
+    </div>
+</div>
 
 
-<p>Person details in State 1:</p>
-<label>First Name:</label>
-<input ng-model="person.firstName" placeholder="First Name">
-<label>Last Name:</label>
-<input ng-model="person.lastName" placeholder="Last Name">
-<hr>
-<p>Try changing input values and see how they are synced with state 2.</p>
+<div ng-controller="restWebworkerController">
+</div>
+
