--- a/app/views/topics/topics.detail.item.html
+++ b/app/views/topics/topics.detail.item.html
@@ -1,6 +1,6 @@
 <hr>
-<div rest rest-path="topics/{{$stateParams.topicId}}/items" rest-id="{{$stateParams.itemId}}" rest-name="item" />
-<div cache="item" />
+<div rest rest-path="topics/{{$stateParams.topicId}}/items" rest-id="{{$stateParams.itemId}}" rest-name="item"></div>
+<div cache="item"></div>
 <alert ng-show="itemLoading" class="alert-warning">Loading item...</alert>
 <alert ng-show="topicsError || topicError || itemError" class="alert-error">Error loading item.</alert>
 <div ng-hide="topicsError || topicError || itemError || itemLoading">
