--- a/app/views/demo/performance/performance.hpcontrols.html
+++ b/app/views/demo/performance/performance.hpcontrols.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div >
+    <div>
+        <h3>Using High Performance controls</h3>
+    </div>
+    <div class="row">
+        <div class="span4" ng-controller="normalGridController">
+            <p>Normal performance load</p>
+            <div ng-show="execTime != null && execTime != 0">
+                <p>Time for render: {{ execTime }} ms.</p>
+            </div>
+            <div class="gridStyle" ng-grid="gridOptions"></div>
+        </div>
 
-</body>
-</html>
+        <div class="span2">
+        </div>
+
+        <!--<div class="span4" ng-controller="hpGridController">-->
+            <!--<p>High performance load</p>-->
+            <!--<div ng-show="execTime != null && execTime != 0">-->
+                <!--<p>Time for render: {{ execTime }} ms.</p>-->
+            <!--</div>-->
+            <!--<div class="gridStyle" ng-grid="gridOptions"></div>-->
+        <!--</div>-->
+    </div>
+</div>
