Added grid data for performance demo. Added json files for demos. Added new methods to RESTFactory for big amounts of data retrieving. Commented serverpush item in main menu.

--- a/app/views/demo/performance/performance.webworkers.html
+++ b/app/views/demo/performance/performance.webworkers.html
@@ -19,7 +19,7 @@
     <hr>
 
     <div class="row">
-        <div class="span6"><img src="resources/webworkers/angular.jpg" id="source"></div>
+        <div class="span6"><img src="../../../images/angularPerformance.jpg" id="source"></div>
         <div class="span6" id="target"/>
     </div>
 
