TMENU73. Improved and simplified preconfigured IDB implementation.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -163,3 +163,7 @@ slider span.bubble.selection {
 slider span.bubble.limit {
     top: -1.1em;
 }
+
+.notetitle,.tagLookup {
+    cursor:pointer;
+}
