--- a/app/views/demo/performance/performance.hpcontrols.html
+++ b/app/views/demo/performance/performance.hpcontrols.html
@@ -14,7 +14,7 @@
 
         <div class="span4"></div>
         <div class="span4">
-            <img src="../../../images/griddata1.png">
+            <img src="images/griddata1.png">
         </div>
     </div>
     <pre>
@@ -36,7 +36,7 @@
 
         <div class="span4"></div>
         <div class="span4">
-            <img src="../../../images/griddata2.png">
+            <img src="images/griddata2.png">
         </div>
     </div>
     <pre>
@@ -58,7 +58,7 @@
         </div>
         <div class="span4"></div>
         <div class="span4">
-            <img src="../../../images/griddata3.png">
+            <img src="images/griddata3.png">
         </div>
     </div>
     <pre>
