--- a/app/styles/cpustyle.css
+++ b/app/styles/cpustyle.css
@@ -45,7 +45,7 @@ Reset and overrides
 body {
   color: #000;
   font-family: 'Open Sans', sans-serif;
-  padding: 0px !important;
+/*  padding: 0px !important;*/
   margin: 0px !important;
   font-size:13px;
   direction: ltr;
