--- a/app/views/topics/topics.detail.item.edit.html
+++ b/app/views/topics/topics.detail.item.edit.html
@@ -1,7 +1,7 @@
 <hr>
 <div cache="item"></div>
 <h4>{{item.name}}
-        <button class="btn" ng-click="done()">Done</button>
+        <button class="btn btn-default" ng-click="done()">Done</button>
     </h4>
 <div>
     <input type="text" ng-model="item.value">
