--- a/app/views/topics/topics.detail.item.html
+++ b/app/views/topics/topics.detail.item.html
@@ -5,7 +5,7 @@
 <alert ng-show="topicsError || topicError || itemError" class="alert-error">Error loading item.</alert>
 <div ng-hide="topicsError || topicError || itemError || itemLoading">
     <h4>{{item.name}}
-        <button class="btn" ng-click="edit()">Edit</button>
+        <button class="btn btn-default" ng-click="edit()">Edit</button>
     </h4>
     <div>{{item.value}}</div>
 </div>
