--- a/app/views/topics/topics.html
+++ b/app/views/topics/topics.html
@@ -1,28 +1,24 @@
 <div class="container">
     <p class="lead">REST Demo</p>
     <div class="row">
-        <div class="span3">
+        <div class="col-md-3 col-sm-4">
             <div class="pa-sidebar well well-small">
-                <ul class="nav nav-list">
-                    <li ng-class="{ active: $state.includes('topics.list') }">
-                        <a ui-sref="topics.list">Topics in development!</a>
-                    </li>
-                    <li class="nav-header">We're working on..</li>
+                <ul class="list-group">
+                    <a class="list-group-item" ng-class="{ active: $state.includes('topics.list') }" ui-sref="topics.list">Topics in development!</a>
+                    <div class="panel-heading">We're working on..</div>
 
                     <!-- This <li> will only add the 'active' class if 'contacts.detail' or its descendants are active
              AND if it is the link for the active contact (aka contactId) -->
                     <div rest rest-path="topics.json" rest-name="topics"></div>
                     <alert ng-show="topicsLoading">Loading...</alert>
                     <alert ng-show="topicsError" class="alert-error">Error loading topics</alert>
-                    <li ng-repeat="topic in topics | limitTo:3" ng-class="{ active: $state.includes('topics.detail') && $stateParams.topicId == topic.id }">
-
-                        <!-- Here's a ui-sref that is also providing necessary parameters -->
-                        <a ui-sref="topics.detail({topicId:topic.id})">{{topic.name}}</a>
-                    </li>
+                    <a ng-repeat="topic in topics | limitTo:3" class="list-group-item" ng-class="{ active: $state.includes('topics.detail') && $stateParams.topicId == topic.id }" ui-sref="topics.detail({topicId:topic.id})">
+                        {{topic.name}}
+                    </a>
                     <small>(Retrieved using rest directive)</small>
                 </ul>
                 <hr>
-                <button class="btn" ng-click="goToRandom()">Show a random topic</button>
+                <button class="btn btn-default" ng-click="goToRandom()">Show a random topic</button>
 
                 <!-- Another named view -->
                 <div ui-view="menuTip" autoscroll="false"></div>
@@ -30,6 +26,6 @@
         </div>
 
         <!-- Our unnamed main ui-view for this template -->
-        <div ui-view class="span9" autoscroll="false"></div>
+        <div ui-view class="col-md-9 col-sm-8" autoscroll="false"></div>
     </div>
 </div>
