--- a/app/views/topics/topics.detail.item.html
+++ b/app/views/topics/topics.detail.item.html
@@ -2,7 +2,7 @@
 <div rest rest-path="topics/{{$stateParams.topicId}}/items" rest-id="{{$stateParams.itemId}}" rest-name="item"></div>
 <div cache="item"></div>
 <alert ng-show="itemLoading" class="alert-warning">Loading item...</alert>
-<alert ng-show="topicsError || topicError || itemError" class="alert-error">Error loading item.</alert>
+<alert ng-show="topicsError || topicError || itemError" class="alert-danger">Error loading item.</alert>
 <div ng-hide="topicsError || topicError || itemError || itemLoading">
     <h4>{{item.name}}
         <button class="btn btn-default" ng-click="edit()">Edit</button>
