--- a/app/styles/grid.scss
+++ b/app/styles/grid.scss
@@ -1,5 +1,9 @@
 .gridStyle {
-  border: 1px solid rgb(212,212,212);
-  width: 600px;
-  height: 300px;
+    border: 1px solid rgb(212, 212, 212);
+    width: 100%;
+    height: 300px;
+}
+img,
+canvas {
+    width: 100%;
 }
