--- a/app/views/demo/performance/performance.html
+++ b/app/views/demo/performance/performance.html
@@ -1,11 +1,11 @@
+<!doctype html>
 <div class="container" scrolly-scroll>
-    <p class="lead">Performance Demo</p>
     <ul class="nav nav-tabs">
         <li ng-class="{ active: $state.includes('performance.webworkers') }">
             <a ui-sref=".webworkers">Web Workers</a>
         </li>
         <li ng-class="{ active: $state.includes('performance.hpcontrols') }">
-            <a ui-sref=".hpcontrols">HP Controls</a>
+            <a ui-sref=".hpcontrols">Data Loading</a>
         </li>
     </ul>
 
