--- a/app/views/demo/ui-bootstrap/ui-b.html
+++ b/app/views/demo/ui-bootstrap/ui-b.html
@@ -20,36 +20,53 @@
     <p class="lead">Date Picker</p>
     <div data-ng-controller="DatepickerDemoCtrl">
         <div class="well pull-left">
-            <p>Selected date is: <em>{{dt | date:'fullDate' }}</em>
-            </p>
+            <pre>Selected date is: <em>{{dt | date:'fullDate' }}</em></pre>
 
-            <div class="form-horizontal">
-                <input type="text" datepicker-popup="dd-MMMM-yyyy" data-ng-model="dt" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" data-ng-required="true" />
-                <button class="btn" data-ng-click="open()">
-                    <i class="icon-calendar"></i>
-                </button>
+            <h4>Inline</h4>
+            <div style="display:inline-block; min-height:290px;">
+                <datepicker ng-model="dt" min-date="minDate" show-weeks="true" datepicker-mode="radioModel" class="well well-sm"></datepicker>
+            </div>
+            <br>
+            <div class="btn-group">
+                <label class="btn btn-primary" ng-model="radioModel" btn-radio="'day'">Day</label>
+                <label class="btn btn-primary" ng-model="radioModel" btn-radio="'month'">Month</label>
+                <label class="btn btn-primary" ng-model="radioModel" btn-radio="'year'">Year</label>
             </div>
 
-            <br>
-            <button class="btn btn-small btn-inverse" data-ng-click="today()">Today</button>
-            <button class="btn btn-small btn-inverse" data-ng-click="dt = '2009-08-24'">2009-08-24</button>
-            <button class="btn btn-small btn-success" data-ng-click="toggleWeeks()" tooltip="For inline datepicker">Toggle Weeks</button>
-            <button class="btn btn-small btn-danger" data-ng-click="clear()">Clear</button>
-            <button class="btn btn-small" data-ng-click="toggleMin()" tooltip="After today restriction">Min date</button>
+            <h4>Popup</h4>
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="input-group">
+                        <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                        <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label>Format:</label>
+                    <select class="form-control" ng-model="format" ng-options="f for f in formats">
+                        <option></option>
+                    </select>
+                </div>
+            </div>
+
+            <hr />
+            <button type="button" class="btn btn-sm btn-info" ng-click="today()">Today</button>
+            <button type="button" class="btn btn-sm btn-default" ng-click="dt = '2009-08-24'">2009-08-24</button>
+            <button type="button" class="btn btn-sm btn-danger" ng-click="clear()">Clear</button>
+            <button type="button" class="btn btn-sm btn-default" ng-click="toggleMin()" tooltip="After today restriction">Min date</button>
         </div>
-        <p class="pull-left">&nbsp;&nbsp;</p>
-        <div class="well pull-left" data-ng-model="dt">
-            <datepicker min="minDate" show-weeks="showWeeks"></datepicker>
-        </div>
-        <div class="clearfix"></div>
     </div>
 
     <hr>
     <p class="lead">Modal</p>
     <div data-ng-controller="ModalDemoCtrl">
         <script type="text/ng-template" id="myModalContent.html">
-            <div class = modal-header>
-                <h3> I 'm a modal!</h3>
+            < div class = modal - header >
+                < h3 > I 'm a modal!</h3>
             </div>
             <div class="modal-body">
                 <ul>
