- Set 1 thread option by default

--- a/app/views/demo/performance/performance.webworkers.html
+++ b/app/views/demo/performance/performance.webworkers.html
@@ -8,8 +8,7 @@
         </div>
         <span class="nullable">
                 <label>Number of pooled workers:</label>
-                <select ng-model="poolSize" ng-options="threadsNumber.value for threadsNumber in threadsNumbers">
-                    <option value="">-- choose execution mode --</option>
+                <select ng-model="poolSize" ng-options="threadsNumber.key as threadsNumber.value for threadsNumber in threadsNumbers">
                 </select>
             </span>
         <br/>
